<?xml version="1.0"?>
<package format="3">
  <name>uart_communication</name>
  <version>0.0.1</version>
  <description>Composable UART component example</description>

  <maintainer email="enestgny@email.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>rclcpp_components</depend>
  <depend>message_filters</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
